[package]
name = "hn-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
anyhow = '1'
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }